package com.unsw.tilegame.tiles;

import com.unsw.tilegame.tool.Assets;

/**
 * dirt tile
 * @author xiaoyang
 * @version 2.7
 * @since 1.5
 */
public class DirtTile extends Tile {

	/**
	 * @param id
	 */
	public DirtTile(int id) {
		super(Assets.dirt, id);
	}

}
