package com.unsw.tilegame.tiles;

import com.unsw.tilegame.tool.Assets;

/**
 * grass background
 * @author xiaoyang
 * @version 2.7
 * @since 1.5
 */
public class GrassTile extends Tile{

	/**
	 * @param id
	 */
	public GrassTile(int id) {
		super(Assets.grass, id);
	}
}
